# SkyNetUamPlatform

./: .gitignore  App.tsx  Architecture_Diagram.html  CITATION.cff  Code_Documentation.html  LICENSE  README.md  SETUP_GITHUB.md  convert_paper.py  create_repo.sh  export_latex.py  generate_figures.py  index.html  metadata.json  package-lock.json  package.json  requirements.txt  types.ts  visualization_snapshot.json
backend/: package-lock.json  package.json  tsconfig.json
components/: FullScreenButton.tsx  MapVisualization.tsx  RWAMarket.tsx  VideoFeed.tsx
contracts/: SkyRouteNFT.sol
docs/: REPO_STRUCTURE.md  neo4j.md
experiments/: sim_large_scale.py  sim_massive_scale_v2.py
experimentsMADDPG/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  (+11 more)
nexus_core/: governance_demo.py  neo4j_client.py  pyproject.toml  workflow_demo.py
nexus_core/assetization/: README.md  __init__.py  asset_contract.py  event_bus.py  identity.py  identity_service.py  integration.py  oracle.py  oracle_service.py  pricing_engine.py  settlement.py  settlement_service.py  tee.py  tokenization.py  valuation.py
nexus_core/data_fabric/: __init__.py  federated.py  lineage.py
nexus_core/economics/: __init__.py  pricing.py
nexus_core/infrastructure/: skynet_adapter.py
nexus_core/integrations/neo4j/: __init__.py  client.py
nexus_core/interfaces/: adapter.py
nexus_core/mas/: agents.py  check_env.py  economics.py  environment.py  maddpg.py  networks.py  run_assetization_demo.py  train_demo.py  uam_env.py
nexus_core/rwa/: oracle.py
nexus_core/smart_contracts/contracts/: AirspaceAuction.sol
(+98 files in other folders)
