[project]
name = "skynet-rwa-nexus"
version = "0.1.0"
description = "A Cyber-Physical Financial System for Low-Altitude Economy using MARL and RWA."
requires-python = ">=3.10"
dependencies = [
    "ray[rllib]>=2.9.0",
    "web3>=6.15.0",
    "pydantic>=2.6.0",
    "aiohttp>=3.9.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "networkx>=3.2.1"
]

[tool.pyright]
include = ["nexus_core"]
reportMissingTypeStubs = false

